moving fonts around

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="header">
-            <h1>Magic 8-Ball</h1>
+        <div class="container">
+            <div class="header">
+                <h1>Magic 8-Ball</h1>
+            </div>
+            <div class="response-container" id="response-container">Ask a question and click the button to reveal the answer.</div>
+            <button class="btn btn-primary btn-lg btn-block" onclick="getRandomResponse()">Ask the Magic 8-Ball</button>
         </div>
-        <div class="response-container" id="response-container">
-            Ask a question and click the button to reveal the answer.
-        </div>
-        <button class="btn btn-primary btn-lg btn-block" onclick="getRandomResponse()">Ask the Magic 8-Ball</button>
 
 
         <script>
